# flapjack-data

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/flapjack_data/: __init__.py  cli.py  model.py  storage.py
src/flapjack_data/backends/: __init__.py  memory.py
src/flapjack_data/backends/postgres/: __init__.py  storage.py
src/flapjack_data/backends/postgres/migrations/: __init__.py  env.py
src/flapjack_data/backends/postgres/migrations/versions/: 0001_initial_schema.py  0002_characterization.py
src/flapjack_data/characterization/: __init__.py  engine.py  inverse.py  types.py  wellfare.py
tests/: test_characterization.py  test_migrations.py  test_postgres.py  test_storage.py
