[project]
name = "flapjack-data"
version = "0.1.0"
description = "Storage-agnostic, Flapjack-compatible measurement data model and storage contract"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mike Arpaia" }]
keywords = ["synthetic-biology", "flapjack", "measurements", "data-model"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flapjack_data"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["flapjack_data"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
