[project]
name = "flapjack-data"
version = "0.1.0"
description = "Storage-agnostic, Flapjack-compatible measurement data model and storage contract"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mike Arpaia" }]
keywords = ["synthetic-biology", "flapjack", "measurements", "data-model"]
dependencies = []

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]
dev = [
    "pytest>=8.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.8",
]

[project.scripts]
flapjack-data = "flapjack_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flapjack_data"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["flapjack_data"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Alembic-managed files (env + version scripts) are not subject to strict typing.
[[tool.mypy.overrides]]
module = [
    "flapjack_data.backends.postgres.migrations.env",
    "flapjack_data.backends.postgres.migrations.versions.*",
]
ignore_errors = true
